# vivid

./: CMakeLists.txt
dependencies/: CMakeLists.txt
examples/: CMakeLists.txt
include/vivid/: utility.h
src/: utility.cpp
tests/: CMakeLists.txt
